--- a/src/sass/blocks/_avto.scss
+++ b/src/sass/blocks/_avto.scss
@@ -53,10 +53,35 @@
 
 @keyframes radial-pulse {
     0% {
-    box-shadow: 0 0 0 0px rgba(23, 22, 22, 0.5);
+        transform: scale(.6);
+		opacity: 0;
     }
   
-    100% {
-    box-shadow: 0 0 0 40px rgba(255, 255, 255, 0);
-    }
+    50%{
+		transform: scale(.9);
+		opacity: 0;
+	}
+    60%{
+
+		-webkit-transform: scale(1.1);opacity: .6;
+
+	}
+
+	70%{
+
+		-webkit-transform: scale(1.3);opacity: .85;
+
+	}
+
+	80%{
+
+		-webkit-transform: scale(1.4);opacity: .6;
+
+	}
+
+	100%{
+
+		-webkit-transform: scale(1.6);opacity: 0;
+
+	}
   }
