--- a/src/sass/blocks/_faqs.scss
+++ b/src/sass/blocks/_faqs.scss
@@ -7,12 +7,14 @@
         color: #2D2D2D;
     }
     &__open {
+        width: 450px;
         margin: 10px 0 35px 0;
         cursor: pointer;
         font-weight: 600;
         font-size: 18px;
         color: #181818;
         i {
+            float: right;
             margin: 5px 5px;
             font-size: 23px;
             color: #181818;
@@ -22,7 +24,7 @@
     }
     &__completed {
         display: none;
-        min-width: 420px;
+        width: 400px;
         padding: 0 0 25px 0;
         font-weight: 400;
         font-size: 16px;
