--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,10 +1,11 @@
 @import 'base/variables';
+@import 'base/fonts';
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto Regular', sans-serif;
 }
 
 .body {
