--- a/src/sass/blocks/_discount.scss
+++ b/src/sass/blocks/_discount.scss
@@ -1,11 +1,10 @@
 .discount {
-    min-height: 530px;
-    padding: 80px 0 80px 0;
+    padding: 30px 0 30px 0;
     &__bg {
         background: #FFFFFF;
         border-radius: 30px;
         padding: 72px 65px 62px 65px;
-        box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+        box-shadow: 0 14px 28px rgba(212, 211, 211, 0.25), 0 10px 10px rgba(0,0,0,0.22);
     }
     &__descr {
         display: inline-block;
