--- a/src/sass/blocks/_forms.scss
+++ b/src/sass/blocks/_forms.scss
@@ -1,11 +1,16 @@
 .form {
     min-height: 400px;
     padding: 60px 0 60px 0;
+    
     &__bg {
         padding: 57px 50px 58px 60px;
         background: $style-color;
         border-radius: 30px;
         box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+        background-image: url('../../img/tire_track.svg');
+        background-size: cover;
+        /* background-repeat: no-repeat; */
+        background-position: top;
     }
     &__title {
         font-weight: 700;
