--- a/src/sass/blocks/_price.scss
+++ b/src/sass/blocks/_price.scss
@@ -1,6 +1,5 @@
 .price {
-    min-height: 800px;
-    padding: 60px 0 60px 0;
+    padding: 30px 0 30px 0;
     &__title {
         font-weight: 700;
         font-size: 39px;
@@ -14,11 +13,16 @@
         margin-bottom: 30px;
     }
     &__bg {
-        width: 300px;
         background: #FFFFFF;
         border-radius: 19px;
         padding: 38px 60px 42px 60px;
-        box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+        box-shadow: 0 14px 28px rgba(158, 152, 152, 0.25), 0 10px 10px rgba(0,0,0,0.22);
+        z-index: 1;
+        transition: all .2s linear;
+        &:hover {
+            transform: scale(1.07);
+            z-index: 99;
+        }
     }
     &__category {
         font-weight: 700;
@@ -39,7 +43,7 @@
         font-weight: 700;
         font-size: 40px;
         line-height: 47px;
-        color: #2D2D2D;
+        color: $style_color;
         text-align: center;
         margin-bottom: 10px;
     }
