--- a/src/sass/blocks/_avto.scss
+++ b/src/sass/blocks/_avto.scss
@@ -40,7 +40,7 @@
         font-size: 16px;
         text-align: center;
         color: #FFFFFF;
-        animation: radial-pulse 1.5s infinite;
+        animation: radial-pulse 1.8s infinite;
         transition: all .5s;
         &:hover {
             animation: none;
@@ -53,35 +53,9 @@
 
 @keyframes radial-pulse {
     0% {
-        transform: scale(.6);
-		opacity: 0;
-    }
-  
-    50%{
-		transform: scale(.9);
-		opacity: 0;
-	}
-    60%{
-
-		-webkit-transform: scale(1.1);opacity: .6;
-
-	}
-
-	70%{
-
-		-webkit-transform: scale(1.3);opacity: .85;
-
-	}
-
-	80%{
-
-		-webkit-transform: scale(1.4);opacity: .6;
-
-	}
-
-	100%{
-
-		-webkit-transform: scale(1.6);opacity: 0;
-
-	}
+        box-shadow: 0 0 10px 0px tomato, 0 0 10px 0px tomato; 
+      }
+      100% {
+        box-shadow: 0 0 18px 6px rgba(255, 48, 26, 0), 0 0 4px 50px rgba(255, 48, 26, 0);
+      }
   }
