--- a/src/sass/blocks/_title.scss
+++ b/src/sass/blocks/_title.scss
@@ -1,18 +1,6 @@
-.title {
-    height: 360px;
-    padding: 60px 0 70px 0;
-    &__text {
-        width: 750px;
-        font-weight: 700;
-        font-size: 35px;
-        line-height: 43px;
-        color: #2D2D2D;
-        margin-bottom: 16px;
-    }
-    &__descr {
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 24px;
-        color: #181818;
-    }
+.section-title {
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 47px;
+    margin-bottom: 25px;
 }
