--- a/src/sass/blocks/_banner.scss
+++ b/src/sass/blocks/_banner.scss
@@ -1,7 +1,9 @@
 .banner {
-    height: 45px;
     background-color: $main-color;
-    padding-top: 8px;
+    &__bg {
+        padding: 7px 0;
+        background-color: #e8b57a;
+    }
     &__inst {
         display: inline-block;
         border-right: 2px solid #fff;
@@ -20,18 +22,21 @@
         }
     }
     &__time {
+        padding-top: 3px;
         font-size: 17px;
         font-weight: 400;
         color: #fff;
     }
     &__price {
+        letter-spacing: 2px;
+        padding-top: 3px;
         display: flex;
         justify-content: flex-end;
         font-size: 17px;
         font-weight: 700;
         color: #fff;
         span {
-            margin-right: 5px;
+            margin-right: 4px;
         }
     }
 }
