--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -1,30 +1,18 @@
 .promo {
-    height: 115px;
-    padding: 30px 0;
+    padding-top: 30px;
+    &__border-bottom {
+        border-bottom: 1px solid #EFEFEF;
+        padding-bottom: 30px;
+    }
     &__phone {
         display: inline-block;
-        margin-top: 16px;
+        margin-top: 17px;
         font-size: 18px;
         font-weight: 700;
         color: $style-color;
         transition: all 500ms ease;
         &:hover {
             color: $main-color;
-        }
-    }
-    &__button {
-        display: inline-block;
-        background: $main-color;
-        border-radius: 16px;
-        font-weight: 700;
-        font-size: 16px;
-        color: #FFFFFF;
-        padding: 15px 40px;
-        transition: all 500ms ease;  
-        &:hover {
-            background: #E5E5E5;
-            color: #FF941F;
-            box-shadow: inset 0 0 0 3px #FF941F;
         }
     }
     &__street {
