--- a/src/sass/blocks/_driving.scss
+++ b/src/sass/blocks/_driving.scss
@@ -5,6 +5,6 @@
         width: 248px;
         font-weight: 400;
         font-size: 16px;
-        color: #181818;
+        color: $text-color;
     }
 }
