--- a/src/sass/blocks/_description.scss
+++ b/src/sass/blocks/_description.scss
@@ -4,7 +4,7 @@
         font-weight: 400;
         font-size: 16px;
         line-height: 24px;
-        color: #181818;
+        color: $text-color;
         margin: 0 0 30px 0;
     }
 }
