--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -43,7 +43,7 @@
         font-weight: 400;
         font-size: 17px;
         line-height: 24px;
-        color: #181818;
+        color: $text-color;
     }
     &__phone {
         display: block;
