--- a/src/sass/blocks/_stages.scss
+++ b/src/sass/blocks/_stages.scss
@@ -26,6 +26,6 @@
         font-weight: 400;
         font-size: 16px;
         line-height: 24px;
-        color: #181818;
+        color: $text-color;
     }
 }
