added conditions file

--- a/src/sass/blocks/_conditions.scss
+++ b/src/sass/blocks/_conditions.scss
@@ -1,5 +1,5 @@
-.description {
-    padding: 80px 0 50px 0;
+.conditions {
+    padding: 30px 0;
     li {
         font-weight: 400;
         font-size: 16px;
