--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -15,10 +15,6 @@ a {
     }
 }
 
-hr, p {
-    margin: 0;
-}
-
 .container {
     max-width: 990px;
     margin: 0 auto;
@@ -29,9 +25,8 @@ hr, p {
 @import 'blocks/menu';
 @import 'blocks/avto';
 @import 'blocks/discount';
-@import 'blocks/title';
-@import 'blocks/driving';
-@import 'blocks/description';
+@import 'blocks/title';;
+@import 'blocks/conditions';
 @import 'blocks/stages';
 @import 'blocks/price';
 @import 'blocks/forms';
