Updated File Tickets, Question

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -48,6 +48,6 @@ hr, p {
 @import 'blocks/map';
 @import 'blocks/footer';
 @import 'blocks/pageup';
-@import 'blocks/content';
 @import 'blocks/media';
 @import 'blocks/btn';
+@import 'blocks/tickets';
