updated file stages

--- a/src/sass/blocks/_stages.scss
+++ b/src/sass/blocks/_stages.scss
@@ -1,6 +1,5 @@
 .stages {
-    min-height: 400px;
-    padding: 75px 0 75px 0;
+    padding: 30px 0;
     &__title {
         font-weight: 700;
         font-size: 35px;
