--- a/src/sass/blocks/_conditions.scss
+++ b/src/sass/blocks/_conditions.scss
@@ -5,6 +5,6 @@
         font-size: 16px;
         line-height: 24px;
         color: $text-color;
-        margin: 0 0 30px 0;
+        padding: 0 0 25px 0;
     }
 }
