--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -21,8 +21,7 @@ a {
 }
 
 @import 'blocks/banner';
-@import 'blocks/promo';
-@import 'blocks/menu';
+@import 'blocks/header';
 @import 'blocks/avto';
 @import 'blocks/discount';
 @import 'blocks/title';;
