--- a/src/sass/blocks/_conditions.scss
+++ b/src/sass/blocks/_conditions.scss
@@ -1,10 +1,22 @@
 .conditions {
     padding: 30px 0;
     li {
+        list-style-type: none;
         font-weight: 400;
         font-size: 16px;
         line-height: 24px;
         color: $text-color;
-        padding: 0 0 25px 0;
+        padding: 0 0 25px 5px;
+        position: relative;
+        &::before {
+            content: '';
+            position: absolute;
+            border-radius: 50%;
+            width: 6px;
+            height: 6px;
+            top: 9px;
+            left: -15px;
+            background-color: $style-color;
+        }
     }
 }
