--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -1,81 +1,19 @@
 @media (max-width: 1200px) {
-    .button__link {
-        display: inline-block;
-        background: $main-color;
-        border-radius: 16px;
-        font-weight: 700;
-        font-size: 16px;
-        color: #FFFFFF;
-        padding: 15px 35px;
-        transition: all .5s; 
-        &-discount {
-            padding: 16px 60px;
-            border: none;
-        } 
-        &-price {
-            padding: 16px 50px;
-        }
-        &:hover {
-            background: transparent;
-            color: #FF941F;
-            box-shadow: inset 0 0 0 3px #FF941F;
-        }
-    }
     
-    .button__form {
-        font-weight: 700;
-        font-size: 16px;
-        background: #FFFFFF;
-        border: none;
-        padding: 16px 60px;
-        border-radius: 16px;
-        color: $style-color;
-        transition: all .5s;
-        &:hover {
-            background: #fff;
-            color: #FF941F;
-            box-shadow: inset 0 0 0 3px #FF941F;
-        }
-    }
-    
-    .btn-show-pulse {
-        display: inline-block;
-        background: #FF941F;
-        border: 5px solid #FF941F;
-        border-radius: 16px;
-        padding: 14px 60px;
-        font-weight: 700;
-        font-size: 16px;
-        text-align: center;
-        color: #FFFFFF;
-        animation: radial-pulse 2.5s infinite;
-        transition: all .5s;
-        &:hover {
-            background: transparent;
-            color: #FF941F;
-            box-shadow: inset 0 0 0 3px #FF941F;
-        }
-    }
-    
-    @keyframes radial-pulse {
-    0% {
-        box-shadow: 0 0 0 0px rgba(255, 148, 31, 1);
-    }
-    100% {
-        box-shadow: 0 0 10px 40px rgba(255, 255, 255, 1);
-    }
-    }
 }
 @media (max-width: 992px) {
-    .menu {
-        &__nav {
-            justify-content: center;
-        }
+    .section-title {
+        text-align: center;
+        font-size: 36px;
     }
     .avto {
-        &__title {
-            text-align: center;
-        }
+       &__btn {
+          text-align: center;
+       }
+       &__img {
+           margin-top: 15px;
+           text-align: center;
+       }
     }
     
 }
