--- a/src/sass/blocks/_discount.scss
+++ b/src/sass/blocks/_discount.scss
@@ -1,5 +1,5 @@
 .discount {
-    padding: 30px 0 30px 0;
+    padding: 30px 5px;
     &__bg {
         background: #FFFFFF;
         border-radius: 30px;
