--- a/src/sass/blocks/_forms.scss
+++ b/src/sass/blocks/_forms.scss
@@ -1,7 +1,5 @@
 .form {
-    min-height: 400px;
-    padding: 60px 0 60px 0;
-    
+    padding: 60px 7px;
     &__bg {
         padding: 57px 50px 58px 60px;
         background: $style-color;
