--- a/src/sass/blocks/_price.scss
+++ b/src/sass/blocks/_price.scss
@@ -4,7 +4,7 @@
         background: #FFFFFF;
         border-radius: 19px;
         padding: 38px 60px 42px 60px;
-        box-shadow: 0 14px 28px rgba(158, 152, 152, 0.25), 0 10px 10px rgba(0,0,0,0.22);
+        box-shadow: 0 14px 28px rgba(198, 194, 194, 0.25), 0 10px 10px rgba(95, 90, 90, 0.22);
         z-index: 1;
         transition: all .2s linear;
         &:hover {
