--- a/src/sass/blocks/_tickets.scss
+++ b/src/sass/blocks/_tickets.scss
@@ -1,8 +1,13 @@
 .tickets {
-    padding: 30px 0;
+    padding: 35px 0;
+    min-height: 560px;
     &__title {
         text-align: center;
-        margin-bottom: 40px;
+        margin-bottom: 30px;
+    }
+    &__school {
+        text-align: center;
+        margin-bottom: 35px;
     }
     &__nav {
         font-size: 22px;
